Actions
Bug #6586
closedWhitespace inconsistencies in the spa feature dependency arrays in zfeature_common.c
Status:
Closed
Priority:
Normal
Assignee:
-
Category:
zfs - Zettabyte File System
Start date:
2016-01-29
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
In zpool_feature_init()
in zfeature_common.c the hole_birth_deps
array and the filesystem_limits_deps
array are formatted with four space continuations, unlike the bookmarks_deps
array and the large_blocks_deps
array, which indent the elements with tabs, as is generally the custom for arrays throughout the codebase.
^Istatic spa_feature_t hole_birth_deps[] = { SPA_FEATURE_ENABLED_TXG,$ ^I SPA_FEATURE_NONE };$
and
^Istatic const spa_feature_t filesystem_limits_deps[] = {$ ^I SPA_FEATURE_EXTENSIBLE_DATASET,$ ^I SPA_FEATURE_NONE$ ^I};$
vs.
^Istatic const spa_feature_t bookmarks_deps[] = {$ ^I^ISPA_FEATURE_EXTENSIBLE_DATASET,$ ^I^ISPA_FEATURE_NONE$ ^I};$
and
^Istatic const spa_feature_t large_blocks_deps[] = {$ ^I^ISPA_FEATURE_EXTENSIBLE_DATASET,$ ^I^ISPA_FEATURE_NONE$ ^I};$
Earlier in the file, there's also
^Istatic spa_feature_t nodeps[] = { SPA_FEATURE_NONE };$
which is probably fine.
Updated by Electric Monk over 6 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 22b6687e7850d421c61bf433a388b7db306aca00
commit 22b6687e7850d421c61bf433a388b7db306aca00 Author: ilovezfs <ilovezfs@icloud.com> Date: 2016-02-11T18:22:26.000Z 6586 Whitespace inconsistencies in the spa feature dependency arrays in zfeature_common.c Reviewed by: Matthew Ahrens <mahrens@delphix.com> Reviewed by: Richard Laager <rlaager@wiktel.com> Approved by: Robert Mustacchi <rm@joyent.com>
Actions