6586 Whitespace inconsistencies in the spa feature dependency arrays in zfeature_common.c Reviewed by: Matthew Ahrens <mahrens@delphix.com> Reviewed by: Richard Laager <rlaager@wiktel.com> Approved by: Robert Mustacchi <rm@joyent.com>